[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MedSplorer"
version = "0.0.1"
authors = [
  { name="Samual J. Hatfield", email="samual-hatfield@uiowa.edu" },
  { name="Forrest Z. Shooster", email="forrest.z.shooster@gmail.com" }
]
description = "Searches PubMed and provides ChatGPT support + assists in literature review"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SamualJHatfield/MedSplorer"